--- a/index.html
+++ b/index.html
@@ -139,15 +139,15 @@
 
             <h5>Tags</h5>
             <div>
-                    <a role="button" href="/tags/announcement.html" class="btn btn-default btn-sm"> announcement (2)</a>
                     <a role="button" href="/tags/f%23.html" class="btn btn-default btn-sm"> f# (2)</a>
-                    <a role="button" href="/tags/api.html" class="btn btn-default btn-sm"> api (1)</a>
-                    <a role="button" href="/tags/Internal.html" class="btn btn-default btn-sm"> Internal (1)</a>
-                    <a role="button" href="/tags/fable.html" class="btn btn-default btn-sm"> fable (1)</a>
+                    <a role="button" href="/tags/announcement.html" class="btn btn-default btn-sm"> announcement (2)</a>
+                    <a role="button" href="/tags/GitHub-Pages.html" class="btn btn-default btn-sm"> GitHub Pages (1)</a>
                     <a role="button" href="/tags/pong.html" class="btn btn-default btn-sm"> pong (1)</a>
+                    <a role="button" href="/tags/InternalsVisibleTo.html" class="btn btn-default btn-sm"> InternalsVisibleTo (1)</a>
+                    <a role="button" href="/tags/Internal.html" class="btn btn-default btn-sm"> Internal (1)</a>
                     <a role="button" href="/tags/TypeProvider.html" class="btn btn-default btn-sm"> TypeProvider (1)</a>
+                    <a role="button" href="/tags/json.html" class="btn btn-default btn-sm"> json (1)</a>
                     <a role="button" href="/tags/c%23.html" class="btn btn-default btn-sm"> c# (1)</a>
-                    <a role="button" href="/tags/golem.html" class="btn btn-default btn-sm"> golem (1)</a>
                     <a role="button" href="/tags/game.html" class="btn btn-default btn-sm"> game (1)</a>
             </div>
             <ul class="pager">
